CADC-8668 add doShutdown() to InitAction, call in RestServlet destroy();